[package]
name = "spotify-explorer"
version = "0.1.0"
authors = ["Matthew Dews <matthew-dews@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.10.0"
tokio = { version = "0.2", features = ["full"] }